<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/totaal"
    style="?android:attr/buttonBarButtonStyle"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minbutton"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:contentDescription="@string/vorige_plaats"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="match_parent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/plaatsbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:contentDescription="@string/plaatsbutton"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="20sp" />

            <Button
                android:id="@+id/plusbutton"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:contentDescription="@string/volgende_plaats"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginEnd="1dp"
                android:textSize="20sp" />



            <Button
                android:id="@+id/helpbutton"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:contentDescription="@string/krijg_hulp"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/help"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/datumnaam"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tijdnaam"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:orientation="horizontal">
            <Button
                android:id="@+id/dagbutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:contentDescription="@string/dag"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/maandbutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/maand"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/jaarbutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:contentDescription="@string/jaar"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="?android:attr/buttonBarButtonStyle"
        android:baselineAligned="false"
        android:background="@drawable/round_text"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tideprevname"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tidenowname"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tidenextname"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tideprevtime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tidenowtime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tidenexttime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/round_text"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tideprevhight"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tidenowhight"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tidenexthight"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>